--- a/CIBUS - Contador.Rmd
+++ b/CIBUS - Contador.Rmd
@@ -46,8 +46,10 @@ try(gs4_auth(
   )
 ))
 
+# rsconnect::writeManifest()
+
 #Importación   --------------------------------------------------------
-data <- read_sheet("1giLcmlA2DtXaHd6L76I3ET3cvoU596XDkm1zf2Uz4AU")
+data <- read_sheet("1qtyC5cpkb1O8TCjYQ-_IaIHbHR6djy84aJoZd_Vgf4o")
 principal <- read_sheet("1sXOTFPhjP9mG0NEpo__csRs1-Xl-oBHjctORKCA_Uy4")
 
 principal <- principal %>% 
@@ -60,7 +62,7 @@ data <- data %>%
 
 
 principal <- principal %>% 
-  left_join(select(data,ref,eval,fecha,`Submission ID`, matches("102"):matches("107")),by=join_by(user_pass==ref))
+  left_join(select(data,ref,eval,fecha,`Submission ID`, matches("68"):matches("73")),by=join_by(user_pass==ref))
 
 principal <- principal %>% 
   mutate(estado = case_when(!is.na(`Submission ID`) ~ "Completado",
@@ -69,10 +71,10 @@ principal <- principal %>%
 #Renombrando demográficos
 # Agregar más demos si es necesario para el contador
 principal <- principal %>% 
-  rename(genero = matches("102"),  # buscando por número de pregunta
-         generacion = matches("103"),
-         jerarquia = matches("104"),
-         tiempo_laboral = matches("105"),) 
+  rename(genero = matches("68"),  # buscando por número de pregunta
+         generacion = matches("69"),
+         jerarquia = matches("70"),
+         tiempo_laboral = matches("71"),) 
 
 
 respuestas_diario <- data %>% 
